# covid19_data_loader

./: .env-sample  .rustfmt.toml  Cargo.toml  LICENSE
src/: csv.rs  db.rs  env_vars.rs  lib.rs  main.rs
