[package]
name = "covid19_data_loader"
version = "0.0.1"
authors = ["Joel Watson <joelwat@gmail.com>"]
edition = "2018"

[lib]
name = "load_covid"
path = "src/lib.rs"

[[bin]]
name = "covid_up"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
