[package]
name = "covid19_data_loader"
version = "0.0.1"
authors = ["Joel Watson <joelwat@gmail.com>"]
edition = "2018"

[lib]
name = "load_covid"
path = "src/lib.rs"

[[bin]]
name = "covid_up"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
dotenv = "0.15"
mysql = "23.0"
